--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 Electivas:
 
-Mostrar los ultimos 4 comentarios
-
-
+Mostrar los ultimos 4 comentario (0.5)
+Confirmar borrado de posteo (0.5)
+Loader inicial (0.5)
+Borrar perfil (0.5)
 
 
 
